--- a/package.json
+++ b/package.json
@@ -2,25 +2,37 @@
   "name": "test-scenarii",
   "version": "0.1.0",
   "description": "",
-  "keywords": [
-      "testing",
-      "jest",
-      "mocha"
-  ],
   "author": "Spiffre",
   "license": "MIT",
-  "main": "dist/index.js",
+  "keywords": [
+    "testing",
+    "jest",
+    "mocha",
+    "code reuse"
+  ],
+  "files": [
+    "dist"
+  ],
+  "main": "dist/test-scenarii.cjs.js",
+  "module": "dist/test-scenarii.esm.js",
+  "browser": "dist/test-scenarii.umd.js",
   "scripts": {
-    "build": "babel sources/test-scenarii.js -o dist/index.js --ignore *.test.js",
-    "prepublish": "npm run build",
-    "test": "jest ./sources/"
+    "dev": "rollup --config --watch --sourcemap",
+    "build": "rollup --config",
+    "test": "jest ./sources/",
+    "pretest": "npm run build",
+    "prepublish": "npm run build"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-jest": "23.0.1",
-    "babel-plugin-transform-es2015-modules-umd": "6.24.1",
-    "babel-preset-es2015": "6.24.1",
-    "jest": "23.1.0"
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "jest": "23.1.0",
+    "rollup": "0.60.1",
+    "rollup-plugin-babel": "3.0.4",
+    "rollup-plugin-commonjs": "9.1.3",
+    "rollup-plugin-node-resolve": "3.3.0"
   }
 }
