--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,24 @@
 		{
 			"type": "node",
 			"request": "launch",
+			"name": "Debugging Tests (fucked)",
+			"cwd": "${workspaceFolder}",
+			"autoAttachChildProcesses": true,
+			"runtimeExecutable": "npm",
+			"runtimeArgs": [
+				"run-script", "test"
+			],
+		},
+		{
+			"type": "node",
+			"request": "launch",
 			"name": "Debugging",
 			"program": "${workspaceFolder}/node_modules/jest/bin/jest",
 			"args": [
 				"--runInBand"
+			],
+			"runtimeArgs": [
+				"--trace-warnings"
 			]
 		}
 	]
