--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "rollup --config --sourcemap",
     "test": "jest ./sources/",
     "pretest": "npm run build",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
