--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@babel/plugin-proposal-object-rest-spread": "7.3.2",
     "@babel/preset-env": "7.3.1",
     "babel-cli": "6.26.0",
+    "babel-eslint": "10.0.1",
     "babel-jest": "24.1.0",
+    "eslint": "5.14.1",
     "jest": "24.1.0",
     "rollup": "1.2.1",
     "rollup-plugin-babel": "4.3.2",
