--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
 	"presets" :
 	[
 		[ 
-			"env",
+			"@babel/preset-env",
 			{
 				"modules": false,
 
@@ -16,6 +16,6 @@
 
 	"plugins" :
 	[
-		"transform-object-rest-spread"
+		"@babel/plugin-proposal-object-rest-spread"
 	]
 }
