--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "prepare": "npm run build"
   },
   "devDependencies": {
+    "@babel/core": "7.3.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.2",
+    "@babel/preset-env": "7.3.1",
     "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-jest": "23.0.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "jest": "23.1.0",
-    "rollup": "0.60.1",
-    "rollup-plugin-babel": "3.0.4",
-    "rollup-plugin-commonjs": "9.1.3",
-    "rollup-plugin-node-resolve": "3.3.0"
+    "babel-jest": "24.1.0",
+    "jest": "24.1.0",
+    "rollup": "1.2.1",
+    "rollup-plugin-babel": "4.3.2",
+    "rollup-plugin-commonjs": "9.2.0",
+    "rollup-plugin-node-resolve": "4.0.0"
   },
   "files": [
     "dist"
