Updated the docs and bumped the version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-scenarii",
-  "version": "1.0.0-rc",
+  "version": "1.0.0-rc2",
   "description": "",
   "author": "Spiffre",
   "license": "MIT",
