--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-scenarii",
-  "version": "1.0.0-rc3",
+  "version": "1.0.0",
   "description": "",
   "author": "Spiffre",
   "license": "MIT",
